--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Sssnnt.GitHub.io</h1>
-      <h2 class="project-tagline">Lennarts page</h2>
+      <h1 class="project-name">Welcome to Lennarts page</h1>
+      <h2 class="project-tagline">my first published page in GitHub</h2>
     </section>
 
     <section class="main-content">
